--- a/Note-Namer-Level-1/index.html
+++ b/Note-Namer-Level-1/index.html
@@ -19,6 +19,14 @@
         margin: 10px;
         font-size: 16px;
         cursor: pointer;
+        border: none;
+        border-radius: 45%;
+        color: white;
+        background-color: #bc4c01;
+        filter: drop-shadow(2px 2px 4px #414040);
+    }
+    button.hover {
+        background-color: #ff9b37;
     }
     button.correct {
         background-color: green;
