--- a/Note-Namer-Level-1/index.html
+++ b/Note-Namer-Level-1/index.html
@@ -25,8 +25,8 @@
         background-color: #bc4c01;
         filter: drop-shadow(2px 2px 4px #414040);
     }
-    button.hover {
-        background-color: #ff9b37;
+    button:hover {
+        background-color: #ff6a00;
     }
     button.correct {
         background-color: green;
