--- a/Note-Namer-Level-5/index.html
+++ b/Note-Namer-Level-5/index.html
@@ -73,14 +73,14 @@
 <audio id="audio" controls style="display: none;"></audio>
 <script>
     const images = [
-        { src: "Assets/Images/staffA-B.jpg", fretSrc: "Assets/Images/fretboardA-B.jpg", answer: "A", audio: "Assets/Audio/Pitch recognition audio-A-B.mp3" },
-        { src: "Assets/Images/staffA-C.jpg", fretSrc: "Assets/Images/fretboardA-C.jpg", answer: "B", audio: "Assets/Audio/Pitch recognition audio-A-C.mp3" },
-        { src: "Assets/Images/staffA-D.jpg", fretSrc: "Assets/Images/fretboardA-D.jpg", answer: "C", audio: "Assets/Audio/Pitch recognition audio-A-D.mp3" },
-        { src: "Assets/Images/staffG-B.jpg", fretSrc: "Assets/Images/fretboardG-B.jpg", answer: "D", audio: "Assets/Audio/Pitch recognition audio-G-B.mp3" },
-        { src: "Assets/Images/staffG-C.jpg", fretSrc: "Assets/Images/fretboardG-C.jpg", answer: "D", audio: "Assets/Audio/Pitch recognition audio-G-C.mp3" },
-        { src: "Assets/Images/staffG-D.jpg", fretSrc: "Assets/Images/fretboardG-D.jpg", answer: "G", audio: "Assets/Audio/Pitch recognition audio-G-D.mp3" },
-        //{ src: "Assets/Images/staff.jpg", fretSrc: "Assets/Images/fretboard", answer: "Answer 7", audio: "audio7.mp3" },
-        //{ src: "Assets/Images/staff.jpg", fretSrc: "Assets/Images/fretboard", answer: "Answer 8", audio: "audio8.mp3" }
+        { src: "assets/images/staffA-B.jpg", fretSrc: "assets/images/fretboardA-B.jpg", answer: "A", audio: "assets/audio/Pitch recognition audio-A-B.mp3" },
+        { src: "assets/images/staffA-C.jpg", fretSrc: "assets/images/fretboardA-C.jpg", answer: "B", audio: "assets/audio/Pitch recognition audio-A-C.mp3" },
+        { src: "assets/images/staffA-D.jpg", fretSrc: "assets/images/fretboardA-D.jpg", answer: "C", audio: "assets/audio/Pitch recognition audio-A-D.mp3" },
+        { src: "assets/images/staffG-B.jpg", fretSrc: "assets/images/fretboardG-B.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-G-B.mp3" },
+        { src: "assets/images/staffG-C.jpg", fretSrc: "assets/images/fretboardG-C.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-G-C.mp3" },
+        { src: "assets/images/staffG-D.jpg", fretSrc: "assets/images/fretboardG-D.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G-D.mp3" },
+        //{ src: "assets/images/staff.jpg", fretSrc: "assets/images/fretboard", answer: "Answer 7", audio: "audio7.mp3" },
+        //{ src: "assets/images/staff.jpg", fretSrc: "assets/images/fretboard", answer: "Answer 8", audio: "audio8.mp3" }
     ];
 
     let buttonOptions = ["A-B", "A-C", "A-D", "G-B", "G-C", "G-D"];
