--- a/Note-Namer-Level-3/index.html
+++ b/Note-Namer-Level-3/index.html
@@ -73,15 +73,15 @@
 <audio id="audio" controls style="display: none;"></audio>
 <script>
     const images = [
-        { src: "Assets/Images/staffA1.jpg", fretSrc: "Assets/Images/fretboardA1.jpg", answer: "A", audio: "Assets/Audio/Pitch recognition audio-A1.mp3" },
-        { src: "Assets/Images/staffB1.jpg", fretSrc: "Assets/Images/fretboardB1.jpg", answer: "B", audio: "Assets/Audio/Pitch recognition audio-B1.mp3" },
-        { src: "Assets/Images/staffC2.jpg", fretSrc: "Assets/Images/fretboardC2.jpg", answer: "C", audio: "Assets/Audio/Pitch recognition audio-C2.mp3" },
-        { src: "Assets/Images/staffD1.jpg", fretSrc: "Assets/Images/fretboardD1.jpg", answer: "D", audio: "Assets/Audio/Pitch recognition audio-D1.mp3" },
-        { src: "Assets/Images/staffD2.jpg", fretSrc: "Assets/Images/fretboardD2.jpg", answer: "D", audio: "Assets/Audio/Pitch recognition audio-D2.mp3" },
-        { src: "Assets/Images/staffE2.jpg", fretSrc: "Assets/Images/fretboardE2.jpg", answer: "E", audio: "Assets/Audio/Pitch recognition audio-E2.mp3" },
-        { src: "Assets/Images/staffF2.jpg", fretSrc: "Assets/Images/fretboardF2.jpg", answer: "F", audio: "Assets/Audio/Pitch recognition audio-F2.mp3" },
-        { src: "Assets/Images/staffG1.jpg", fretSrc: "Assets/Images/fretboardG1.jpg", answer: "G", audio: "Assets/Audio/Pitch recognition audio-G1.mp3" },
-        { src: "Assets/Images/staffG2.jpg", fretSrc: "Assets/Images/fretboardG2.jpg", answer: "G", audio: "Assets/Audio/Pitch recognition audio-G2.mp3" },
+        { src: "assets/images/staffA1.jpg", fretSrc: "assets/images/fretboardA1.jpg", answer: "A", audio: "assets/audio/Pitch recognition audio-A1.mp3" },
+        { src: "assets/images/staffB1.jpg", fretSrc: "assets/images/fretboardB1.jpg", answer: "B", audio: "assets/audio/Pitch recognition audio-B1.mp3" },
+        { src: "assets/images/staffC2.jpg", fretSrc: "assets/images/fretboardC2.jpg", answer: "C", audio: "assets/audio/Pitch recognition audio-C2.mp3" },
+        { src: "assets/images/staffD1.jpg", fretSrc: "assets/images/fretboardD1.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-D1.mp3" },
+        { src: "assets/images/staffD2.jpg", fretSrc: "assets/images/fretboardD2.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-D2.mp3" },
+        { src: "assets/images/staffE2.jpg", fretSrc: "assets/images/fretboardE2.jpg", answer: "E", audio: "assets/audio/Pitch recognition audio-E2.mp3" },
+        { src: "assets/images/staffF2.jpg", fretSrc: "assets/images/fretboardF2.jpg", answer: "F", audio: "assets/audio/Pitch recognition audio-F2.mp3" },
+        { src: "assets/images/staffG1.jpg", fretSrc: "assets/images/fretboardG1.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G1.mp3" },
+        { src: "assets/images/staffG2.jpg", fretSrc: "assets/images/fretboardG2.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G2.mp3" },
     ];
 
     let buttonOptions = ["A", "B", "C", "D", "E", "F", "G"];
