--- a/Note-Namer-Level-4/index.html
+++ b/Note-Namer-Level-4/index.html
@@ -73,30 +73,30 @@
 <audio id="audio" controls style="display: none;"></audio>
 <script>
     const images = [
-        { src: "Assets/Images/staffA-B.jpg", fretSrc: "Assets/Images/fretboardA-B.jpg", answer: "A-B", audio: "Assets/Audio/Pitch recognition audio-A-B.mp3" },
-        { src: "Assets/Images/staffA-C.jpg", fretSrc: "Assets/Images/fretboardA-C.jpg", answer: "A-C", audio: "Assets/Audio/Pitch recognition audio-A-C.mp3" },
-        { src: "Assets/Images/staffA-D.jpg", fretSrc: "Assets/Images/fretboardA-D.jpg", answer: "A-D", audio: "Assets/Audio/Pitch recognition audio-A-D.mp3" },
-        { src: "Assets/Images/staffA1.jpg", fretSrc: "Assets/Images/fretboardA1.jpg", answer: "A", audio: "Assets/Audio/Pitch recognition audio-A1.mp3" },
-        { src: "Assets/Images/staffB-E.jpg", fretSrc: "Assets/Images/fretboardB-E.jpg", answer: "B-E", audio: "Assets/Audio/Pitch recognition audio-B-E.mp3" },
-        { src: "Assets/Images/staffB-F.jpg", fretSrc: "Assets/Images/fretboardB-F.jpg", answer: "B-F", audio: "Assets/Audio/Pitch recognition audio-B-F.mp3" },
-        { src: "Assets/Images/staffB-G.jpg", fretSrc: "Assets/Images/fretboardB-G.jpg", answer: "B-G", audio: "Assets/Audio/Pitch recognition audio-B-G.mp3" },
-        { src: "Assets/Images/staffB1.jpg", fretSrc: "Assets/Images/fretboardB1.jpg", answer: "B", audio: "Assets/Audio/Pitch recognition audio-B1.mp3" },
-        { src: "Assets/Images/staffC-E.jpg", fretSrc: "Assets/Images/fretboardC-E.jpg", answer: "C-E", audio: "Assets/Audio/Pitch recognition audio-C-E.mp3" },
-        { src: "Assets/Images/staffC-F.jpg", fretSrc: "Assets/Images/fretboardC-F.jpg", answer: "C-F", audio: "Assets/Audio/Pitch recognition audio-C-F.mp3" },
-        { src: "Assets/Images/staffC-G.jpg", fretSrc: "Assets/Images/fretboardC-G.jpg", answer: "C-G", audio: "Assets/Audio/Pitch recognition audio-C-G.mp3" },
-        { src: "Assets/Images/staffC2.jpg", fretSrc: "Assets/Images/fretboardC2.jpg", answer: "C", audio: "Assets/Audio/Pitch recognition audio-C2.mp3" },
-        { src: "Assets/Images/staffD-E.jpg", fretSrc: "Assets/Images/fretboardD-E.jpg", answer: "D-E", audio: "Assets/Audio/Pitch recognition audio-D-E.mp3" },
-        { src: "Assets/Images/staffD-F.jpg", fretSrc: "Assets/Images/fretboardD-F.jpg", answer: "D-F", audio: "Assets/Audio/Pitch recognition audio-D-F.mp3" },
-        { src: "Assets/Images/staffD-G.jpg", fretSrc: "Assets/Images/fretboardD-G.jpg", answer: "D-G", audio: "Assets/Audio/Pitch recognition audio-D-G.mp3" },
-        { src: "Assets/Images/staffD1.jpg", fretSrc: "Assets/Images/fretboardD1.jpg", answer: "D", audio: "Assets/Audio/Pitch recognition audio-D1.mp3" },
-        { src: "Assets/Images/staffD2.jpg", fretSrc: "Assets/Images/fretboardD2.jpg", answer: "D", audio: "Assets/Audio/Pitch recognition audio-D2.mp3" },
-        { src: "Assets/Images/staffE2.jpg", fretSrc: "Assets/Images/fretboardE2.jpg", answer: "E", audio: "Assets/Audio/Pitch recognition audio-E2.mp3" },
-        { src: "Assets/Images/staffF2.jpg", fretSrc: "Assets/Images/fretboardF2.jpg", answer: "F", audio: "Assets/Audio/Pitch recognition audio-F2.mp3" },
-        { src: "Assets/Images/staffG-B.jpg", fretSrc: "Assets/Images/fretboardG-B.jpg", answer: "G-B", audio: "Assets/Audio/Pitch recognition audio-G-B.mp3" },
-        { src: "Assets/Images/staffG-C.jpg", fretSrc: "Assets/Images/fretboardG-C.jpg", answer: "G-D", audio: "Assets/Audio/Pitch recognition audio-G-D.mp3" },
-        { src: "Assets/Images/staffG-D.jpg", fretSrc: "Assets/Images/fretboardG-D.jpg", answer: "G-C", audio: "Assets/Audio/Pitch recognition audio-G-C.mp3" },
-        { src: "Assets/Images/staffG1.jpg", fretSrc: "Assets/Images/fretboardG1.jpg", answer: "G", audio: "Assets/Audio/Pitch recognition audio-G1.mp3" },
-        { src: "Assets/Images/staffG2.jpg", fretSrc: "Assets/Images/fretboardG2.jpg", answer: "G", audio: "Assets/Audio/Pitch recognition audio-G2.mp3" },
+        { src: "assets/images/staffA-B.jpg", fretSrc: "assets/images/fretboardA-B.jpg", answer: "A-B", audio: "assets/audio/Pitch recognition audio-A-B.mp3" },
+        { src: "assets/images/staffA-C.jpg", fretSrc: "assets/images/fretboardA-C.jpg", answer: "A-C", audio: "assets/audio/Pitch recognition audio-A-C.mp3" },
+        { src: "assets/images/staffA-D.jpg", fretSrc: "assets/images/fretboardA-D.jpg", answer: "A-D", audio: "assets/audio/Pitch recognition audio-A-D.mp3" },
+        { src: "assets/images/staffA1.jpg", fretSrc: "assets/images/fretboardA1.jpg", answer: "A", audio: "assets/audio/Pitch recognition audio-A1.mp3" },
+        { src: "assets/images/staffB-E.jpg", fretSrc: "assets/images/fretboardB-E.jpg", answer: "B-E", audio: "assets/audio/Pitch recognition audio-B-E.mp3" },
+        { src: "assets/images/staffB-F.jpg", fretSrc: "assets/images/fretboardB-F.jpg", answer: "B-F", audio: "assets/audio/Pitch recognition audio-B-F.mp3" },
+        { src: "assets/images/staffB-G.jpg", fretSrc: "assets/images/fretboardB-G.jpg", answer: "B-G", audio: "assets/audio/Pitch recognition audio-B-G.mp3" },
+        { src: "assets/images/staffB1.jpg", fretSrc: "assets/images/fretboardB1.jpg", answer: "B", audio: "assets/audio/Pitch recognition audio-B1.mp3" },
+        { src: "assets/images/staffC-E.jpg", fretSrc: "assets/images/fretboardC-E.jpg", answer: "C-E", audio: "assets/audio/Pitch recognition audio-C-E.mp3" },
+        { src: "assets/images/staffC-F.jpg", fretSrc: "assets/images/fretboardC-F.jpg", answer: "C-F", audio: "assets/audio/Pitch recognition audio-C-F.mp3" },
+        { src: "assets/images/staffC-G.jpg", fretSrc: "assets/images/fretboardC-G.jpg", answer: "C-G", audio: "assets/audio/Pitch recognition audio-C-G.mp3" },
+        { src: "assets/images/staffC2.jpg", fretSrc: "assets/images/fretboardC2.jpg", answer: "C", audio: "assets/audio/Pitch recognition audio-C2.mp3" },
+        { src: "assets/images/staffD-E.jpg", fretSrc: "assets/images/fretboardD-E.jpg", answer: "D-E", audio: "assets/audio/Pitch recognition audio-D-E.mp3" },
+        { src: "assets/images/staffD-F.jpg", fretSrc: "assets/images/fretboardD-F.jpg", answer: "D-F", audio: "assets/audio/Pitch recognition audio-D-F.mp3" },
+        { src: "assets/images/staffD-G.jpg", fretSrc: "assets/images/fretboardD-G.jpg", answer: "D-G", audio: "assets/audio/Pitch recognition audio-D-G.mp3" },
+        { src: "assets/images/staffD1.jpg", fretSrc: "assets/images/fretboardD1.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-D1.mp3" },
+        { src: "assets/images/staffD2.jpg", fretSrc: "assets/images/fretboardD2.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-D2.mp3" },
+        { src: "assets/images/staffE2.jpg", fretSrc: "assets/images/fretboardE2.jpg", answer: "E", audio: "assets/audio/Pitch recognition audio-E2.mp3" },
+        { src: "assets/images/staffF2.jpg", fretSrc: "assets/images/fretboardF2.jpg", answer: "F", audio: "assets/audio/Pitch recognition audio-F2.mp3" },
+        { src: "assets/images/staffG-B.jpg", fretSrc: "assets/images/fretboardG-B.jpg", answer: "G-B", audio: "assets/audio/Pitch recognition audio-G-B.mp3" },
+        { src: "assets/images/staffG-C.jpg", fretSrc: "assets/images/fretboardG-C.jpg", answer: "G-D", audio: "assets/audio/Pitch recognition audio-G-D.mp3" },
+        { src: "assets/images/staffG-D.jpg", fretSrc: "assets/images/fretboardG-D.jpg", answer: "G-C", audio: "assets/audio/Pitch recognition audio-G-C.mp3" },
+        { src: "assets/images/staffG1.jpg", fretSrc: "assets/images/fretboardG1.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G1.mp3" },
+        { src: "assets/images/staffG2.jpg", fretSrc: "assets/images/fretboardG2.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G2.mp3" },
     ];
 
     let buttonOptions = ["A", "B", "C", "D", "E", "F", "G", "A-B", "A-C", "A-D", "C-E", "C-F", "C-G", "D-G", "D-F", "D-G", "G-B", "G-C", "G-D"];
