Keep Fret if selected

--- a/Note-Namer-Level-2/index.html
+++ b/Note-Namer-Level-2/index.html
@@ -129,7 +129,12 @@
         const currentImage = images[imageOrder[count]];
         shuffleButtonOptions(buttonOptions);
 
-        document.getElementById("quizImage").src = currentImage.src;
+        if (switchImageButton.textContent === "Click For Fret Image") {
+            document.getElementById("quizImage").src = currentImage.src;
+        }
+        else {
+            document.getElementById("quizImage").src = currentImage.fretSrc;
+        }
 
         const optionsContainer = document.getElementById("options");
         optionsContainer.innerHTML = "";
