Static Answer buttons 1,2,3

--- a/Note-Namer-Level-2/index.html
+++ b/Note-Namer-Level-2/index.html
@@ -81,7 +81,7 @@
         { src: "Assets/Images/staffG-D.jpg", fretSrc: "Assets/Images/fretboardG-D.jpg", answer: "G-D", audio: "Assets/Audio/Pitch recognition audio-G-D.mp3" },
     ];
 
-    let buttonOptions = ["A-B", "A-C", "A-D", "G-B", "G-C", "G-D"];
+    let buttonOptions = ["G-B", "G-C", "G-D", "|", "A-B", "A-C", "A-D"];
 
     let count = 0;
     let incorrectCount = 0;
@@ -127,7 +127,7 @@
         }
 
         const currentImage = images[imageOrder[count]];
-        shuffleButtonOptions(buttonOptions);
+        //shuffleButtonOptions(buttonOptions);
 
         if (switchImageButton.textContent === "Click For Fret Image") {
             document.getElementById("quizImage").src = currentImage.src;
@@ -139,34 +139,37 @@
         const optionsContainer = document.getElementById("options");
         optionsContainer.innerHTML = "";
         buttonOptions.forEach(option => {
-            let button = document.createElement("button");
-            button.textContent = option;
-            button.onclick = () => checkAnswer(button, option === currentImage.answer);
-            optionsContainer.appendChild(button);
+            if (option === "|") {
+                let br = document.createElement("br");
+                optionsContainer.appendChild(br);
+            }
+            else {
+                let button = document.createElement("button");
+                button.textContent = option;
+                button.onclick = () => checkAnswer(button, option === currentImage.answer);
+                optionsContainer.appendChild(button);
+            }
         });
     }
 
     async function checkAnswer(button, isCorrect) {
         //const buttons = document.querySelectorAll("#options button");
-            if (isCorrect) {
+        if (isCorrect) {
                 button.classList.add("correct");
                 const audio = new Audio(images[imageOrder[count]].audio);
                 audio.play();
                 count++;
-                if (incorrectCount === 0) {
-                    document.getElementById("percentCorrect").textContent = 100;
-                }
-                else {
-                    document.getElementById("percentCorrect").textContent = Math.floor(++correctCount / ++incorrectCount * 100);
-                }
-                document.getElementById("questionCount").textContent = ++questionCount;
+                correctCount++;
+                questionCount++;
+                document.getElementById("percentCorrect").textContent = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
+                document.getElementById("questionCount").textContent = questionCount;
                 await new Promise(r => setTimeout(r, 750));
                 displayQuestion();
             }
             else {
                 incorrectCount++;
                 button.classList.add("incorrect");
-                document.getElementById("percentCorrect").textContent = Math.floor(++correctCount / ++incorrectCount * 100);
+                document.getElementById("percentCorrect").textContent = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
             }
             button.disabled = true;
     }
