--- a/Note-Namer-Level-1/index.html
+++ b/Note-Namer-Level-1/index.html
@@ -83,7 +83,7 @@
         //{ src: "Assets/Images/staff.jpg", fretSrc: "Assets/Images/fretboard", answer: "Answer 8", audio: "audio8.mp3" }
     ];
 
-    let buttonOptions = ["A", "B", "C", "D", "G"];
+    let buttonOptions = ["G", "A", "B", "C", "D"];
 
     let count = 0;
     let incorrectCount = 0;
@@ -129,7 +129,7 @@
         }
 
         const currentImage = images[imageOrder[count]];
-        shuffleButtonOptions(buttonOptions);
+        //shuffleButtonOptions(buttonOptions);
 
         if (switchImageButton.textContent === "Click For Fret Image") {
             document.getElementById("quizImage").src = currentImage.src;
@@ -155,20 +155,17 @@
                 const audio = new Audio(images[imageOrder[count]].audio);
                 audio.play();
                 count++;
-                if (incorrectCount === 0) {
-                    document.getElementById("percentCorrect").textContent = 100;
-                }
-                else {
-                    document.getElementById("percentCorrect").textContent = Math.floor(++correctCount / ++incorrectCount * 100);
-                }
-                document.getElementById("questionCount").textContent = ++questionCount;
+                correctCount++;
+                questionCount++;
+                document.getElementById("percentCorrect").textContent = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
+                document.getElementById("questionCount").textContent = questionCount;
                 await new Promise(r => setTimeout(r, 750));
                 displayQuestion();
             }
             else {
                 incorrectCount++;
                 button.classList.add("incorrect");
-                document.getElementById("percentCorrect").textContent = Math.floor(++correctCount / ++incorrectCount * 100);
+                document.getElementById("percentCorrect").textContent = Math.floor(correctCount / (questionCount + incorrectCount) * 100);
             }
             button.disabled = true;
     }
