--- a/Note-Namer-Level-2/index.html
+++ b/Note-Namer-Level-2/index.html
@@ -8,6 +8,8 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
+        height: 100vh; /* Set the height of the body to 100% of the viewport height */
+        
     }
     img {
         max-width: 1000px;
