--- a/Note-Namer-Level-2/index.html
+++ b/Note-Namer-Level-2/index.html
@@ -8,6 +8,7 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
+        width: 100vw; /* Set the width of the body to 100% of the viewport width */
         height: 100vh; /* Set the height of the body to 100% of the viewport height */
         
     }
