--- a/Note-Namer-Level-2/index.html
+++ b/Note-Namer-Level-2/index.html
@@ -8,14 +8,14 @@
     body {
         font-family: Arial, sans-serif;
         text-align: center;
-        width: 100vw; /* Set the width of the body to 100% of the viewport width */
-        height: 100vh; /* Set the height of the body to 100% of the viewport height */
+        width: fit-content; /* Set the width of the body to 100% of the viewport width */
         
     }
     img {
         max-width: 1000px;
         max-height: 400px;
         margin-bottom: 20px;
+        
     }
     button {
         padding: 10px 20px;
