--- a/Note-Namer-Level-2/index.html
+++ b/Note-Namer-Level-2/index.html
@@ -6,10 +6,11 @@
 <title>Note-Namer Level 1</title>
 <style>
     body {
+        margin: auto;
         font-family: Arial, sans-serif;
         text-align: center;
         width: fit-content; /* Set the width of the body to 100% of the viewport width */
-        
+        height: fit-content; /* Set the height of the body to 100% of the viewport height */
     }
     img {
         max-width: 1000px;
