--- a/Note-Namer-Level-2/index.html
+++ b/Note-Namer-Level-2/index.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=fit-content, initial-scale=1.0">
 <title>Note-Namer Level 1</title>
 <style>
     body {
         margin: auto;
         font-family: Arial, sans-serif;
         text-align: center;
-        width: fit-content; /* Set the width of the body to 100% of the viewport width */
-        height: fit-content; /* Set the height of the body to 100% of the viewport height */
     }
     img {
         max-width: 1000px;
