--- a/Note-Namer-Level-4/index.html
+++ b/Note-Namer-Level-4/index.html
@@ -6,13 +6,13 @@
 <title>Note-Namer Level 1</title>
 <style>
     body {
+        margin: auto;
         font-family: Arial, sans-serif;
         text-align: center;
     }
     img {
         max-width: 1000px;
-        max-height: 400px;
-        margin-bottom: 20px;
+        max-height: 300px;
     }
     button {
         padding: 10px 20px;
