--- a/Note-Namer-Level-5/index.html
+++ b/Note-Namer-Level-5/index.html
@@ -41,7 +41,11 @@
         color: white;
         animation: shake 0.2s ease-in-out 0s 2;
         box-shadow: 0 0 0.6rem #ff0000;
-    }.dropdown {
+    }
+    button.sharp {
+        margin-right: 2rem;
+    }
+    .dropdown {
         position: relative;
         display: inline-block;
         margin-left: 100px;
@@ -109,20 +113,20 @@
         { src: "assets/images/staffA1.jpg", fretSrc: "assets/images/fretboardA1.jpg", answer: "A", audio: "assets/audio/Pitch recognition audio-A1.mp3" },
         { src: "assets/images/staffB1.jpg", fretSrc: "assets/images/fretboardB1.jpg", answer: "B", audio: "assets/audio/Pitch recognition audio-B1.mp3" },
         { src: "assets/images/staffC2.jpg", fretSrc: "assets/images/fretboardC2.jpg", answer: "C", audio: "assets/audio/Pitch recognition audio-C2.mp3" },
-        { src: "assets/images/staffG-B.jpg", fretSrc: "assets/images/fretboardG-B.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-G-B.mp3" },
-        { src: "assets/images/staffG-C.jpg", fretSrc: "assets/images/fretboardG-C.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-G-C.mp3" },
-        { src: "assets/images/staffG-D.jpg", fretSrc: "assets/images/fretboardG-D.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G-D.mp3" },
-        { src: "assets/images/staffA-B.jpg", fretSrc: "assets/images/fretboardA-B.jpg", answer: "A", audio: "assets/audio/Pitch recognition audio-A-B.mp3" },
-        { src: "assets/images/staffA-C.jpg", fretSrc: "assets/images/fretboardA-C.jpg", answer: "B", audio: "assets/audio/Pitch recognition audio-A-C.mp3" },
-        { src: "assets/images/staffA-D.jpg", fretSrc: "assets/images/fretboardA-D.jpg", answer: "C", audio: "assets/audio/Pitch recognition audio-A-D.mp3" },
-        { src: "assets/images/staffG-B.jpg", fretSrc: "assets/images/fretboardG-B.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-G-B.mp3" },
-        { src: "assets/images/staffG-C.jpg", fretSrc: "assets/images/fretboardG-C.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-G-C.mp3" },
-        { src: "assets/images/staffG-D.jpg", fretSrc: "assets/images/fretboardG-D.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G-D.mp3" },
+        { src: "assets/images/staffCsharp2.jpg", fretSrc: "assets/images/fretboardCsharp2.jpg", answer: "C#", audio: "assets/audio/Pitch recognition audio-Csharp2.mp3" },
+        { src: "assets/images/staffD1.jpg", fretSrc: "assets/images/fretboardD1.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-D1.mp3" },
+        { src: "assets/images/staffD2.jpg", fretSrc: "assets/images/fretboardD2.jpg", answer: "D", audio: "assets/audio/Pitch recognition audio-D2.mp3" },
+        { src: "assets/images/staffE2.jpg", fretSrc: "assets/images/fretboardE2.jpg", answer: "E", audio: "assets/audio/Pitch recognition audio-E2.mp3" },
+        { src: "assets/images/staffF2.jpg", fretSrc: "assets/images/fretboardF2.jpg", answer: "F", audio: "assets/audio/Pitch recognition audio-F2.mp3" },
+        { src: "assets/images/staffFsharp2.jpg", fretSrc: "assets/images/fretboardFsharp2.jpg", answer: "F#", audio: "assets/audio/Pitch recognition audio-Fsharp2.mp3" },
+        { src: "assets/images/staffG1.jpg", fretSrc: "assets/images/fretboardG1.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G1.mp3" },
+        { src: "assets/images/staffG2.jpg", fretSrc: "assets/images/fretboardG1.jpg", answer: "G", audio: "assets/audio/Pitch recognition audio-G2.mp3" },
+        { src: "assets/images/staffGsharp2.jpg", fretSrc: "assets/images/fretboardGsharp2.jpg", answer: "G#", audio: "assets/audio/Pitch recognition audio-Gsharp2.mp3" },
         //{ src: "assets/images/staff.jpg", fretSrc: "assets/images/fretboard", answer: "Answer 7", audio: "audio7.mp3" },
         //{ src: "assets/images/staff.jpg", fretSrc: "assets/images/fretboard", answer: "Answer 8", audio: "audio8.mp3" }
     ];
 
-    let buttonOptions = ["A-B", "A-C", "A-D", "G-B", "G-C", "G-D"];
+    let buttonOptions = ["A", "B", "C", "D", "E", "F", "G", "|", "C#", "F#", "G#"];
 
     let count = 0;
     let incorrectCount = 0;
@@ -211,6 +215,9 @@
             }
             else {
                 let button = document.createElement("button");
+                if (option.includes("#")) {
+                    button.classList.add("sharp");
+                }
                 button.textContent = option;
                 button.onclick = () => checkAnswer(button, option === currentImage.answer);
                 optionsContainer.appendChild(button);
