--- a/Note-Namer-Level-1/index.html
+++ b/Note-Namer-Level-1/index.html
@@ -11,8 +11,12 @@
         text-align: center;
     }
     img {
-        max-width: 1000px;
-        max-height: 340px;
+        max-width: 87%;
+        max-height: 65%;
+    }
+    img.fret {
+        max-width: 33.4%;
+        max-height: 100%;
     }
     button {
         padding: 10px 20px;
