Fixed margins for accidentals

--- a/Note-Namer-Level-5/index.html
+++ b/Note-Namer-Level-5/index.html
@@ -49,7 +49,8 @@
         box-shadow: 0 0 0.6rem #ff0000;
     }
     button.accidental {
-        margin-right: 2rem;
+        margin-left: 1.8rem;
+        margin-right: 1.8rem;
     }
     .dropdown {
         position: relative;
