--- a/Note-Namer-Level-5/index.html
+++ b/Note-Namer-Level-5/index.html
@@ -34,7 +34,7 @@
     }
     button:disabled,
     button[disabled]{
-    border: 1px solid #999999;
+    border: none;
     background-color: #cccccc;
     color: #666666;
     }
