--- a/template index.html
+++ b/template index.html
@@ -19,15 +19,15 @@
         max-height: 100%;
     }
     button {
-        padding: 10px 20px;
-        margin: 10px;
-        font-size: 16px;
+        padding: 1rem 2rem;
+        margin: 1rem;
+        font-size: 1.6rem;
         cursor: pointer;
         border: none;
         border-radius: 45%;
         color: white;
         background-color: #bc4c01;
-        filter: drop-shadow(2px 2px 4px #414040);
+        filter: drop-shadow(.2rem .2rem .4rem #414040);
     }
     button:hover {
         background-color: #ff6a00;
